Add parameter to arrays/ documentation
