# docs/swagger.json
@@ -19,6 +19,17 @@
                     "application/json"
                 ],
                 "summary": "Serves the /arrays resource POST requests",
+                "parameters": [
+                    {
+                        "description": "The unsorted array of numbers",
+                        "name": "unsorted",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/arrays.ArraysJSON"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -85,6 +96,25 @@
                     },
                     "500": {
                         "description": ""
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "arrays.ArraysJSON": {
+            "type": "object",
+            "properties": {
+                "sorted": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                },
+                "unsorted": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
                     }
                 }
             }
